[package]
name = "voltorb-rtcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
chrono = { version = "0.4.22", features = ["serde"] }
env_logger = "0.9.0"
futures = "0.3.24"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.6.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["full"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
warp = "0.3.2"
